Maintenance request streaming done
