# src/main/resources/api/api.yaml
@@ -268,6 +268,21 @@ paths:
       responses:
         200:
           description: OK
+  /maintenance-requests/updates/stream:
+    get:
+      summary: Stream maintenance request updates
+      operationId: getMaintenanceRequestsUpdatesStream
+      tags:
+        - maintenance-requests
+      responses:
+        200:
+          description: OK
+          content:
+            text/event-stream:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/MaintenanceRequestDto"
 
 components:
   parameters:
